--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,113 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root{
+--navbar-bg:rgb(255, 187, 0);
+--table-header-bg:rgb(255, 187, 0);
+}
+*:focus {
+  outline: none;
+}
+.container {
+  border: 1px solid red;
+min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  box-shadow: 1px 3px 4px 0px grey;
+}
+.form {
+  padding: 1em;
+
+  display: grid;
+  justify-items: start;
+  align-items: flex-start;
+  justify-content: start;
+  gap: 1.5em;
+}
+.button {
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+  padding: 1em 1em;
+  font-size: 0.7rem;
+  font-weight: 200;
+  transition: 300ms ease-in-out;
+  border-radius: 3px;
+
+  text-transform: capitalize;
+}
+
+.submit {
+  background: green;
+}
+
+.submit:hover {
+  background: rgb(7, 87, 7);
+}
+
+.disabled {
+  background: rgb(146, 202, 158);
+
+  pointer-events: none;
+}
+
+input,
+label {
+  display: block;
+}
+
+input {
+  text-transform: capitalize;
+  padding: 0.6em;
+  border: none;
+  border-bottom: 1px solid grey;
+}
+
+.table-container {
+  /* border-radius: 1em; */
+  display: inline-block;
+  overflow: auto;
+  height: 17em;
+
+
+  /* box-shadow: 1px 3px 4px 0px grey; */
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 0.8rem;
+
+}
+
+th {
+  background:var(--table-header-bg);
+  text-transform: uppercase;
+  color: #661c17;
+  padding: 2em 1em;
+  text-align: start;
+  position: sticky;
+  top:0;
+}
+
+td {
+  padding: 0.5em 1em;
+  cursor: pointer;
+  border-bottom: 1px solid grey;
+  /* background-image: linear-gradient(to bottom, white, rgb(190, 190, 190)); */
+}
+
+h1 {
+  font-weight: lighter;
+  text-transform: uppercase;
+}
