--- a/src/app/components/stocks/stocks.component.css
+++ b/src/app/components/stocks/stocks.component.css
@@ -28,3 +28,32 @@ input {
 
   padding: 1em;
 }
+
+.status-info-container{
+
+
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+
+
+
+
+}
+.info-form{
+
+
+    display: grid;
+    justify-content: flex-start;
+    justify-items: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap:1em;
+}
+
+
+.box{
+    /* border:1px solid black; */
+padding:1em 0;
+
+}
+
