--- a/src/app/components/toast/toast.component.html
+++ b/src/app/components/toast/toast.component.html
@@ -1,1 +1,3 @@
-<p>toast works!</p>
+<div class="toast" [class.display]="toast.active" [class]="toast.severity">
+    <p>{{toast.message}}</p>
+</div>
