--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
   outline: none;
 }
 .container {
-  border: 1px solid red;
+
 min-height: 100vh;
 
   display: flex;
@@ -58,6 +58,10 @@ min-height: 100vh;
 
 .submit:hover {
   background: rgb(7, 87, 7);
+}
+
+.default:hover{
+  background:rgb(39, 87, 126);
 }
 
 .disabled {
