--- a/src/app/components/stocks/stocks.component.css
+++ b/src/app/components/stocks/stocks.component.css
@@ -29,26 +29,81 @@ input {
   padding: 1em;
 }
 
-.status-info-container{
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-
+.status-info-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.info-form{
-    display: grid;
-    justify-content: flex-start;
-    justify-items: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
-    gap:1em;
-}
-
-
-.box{
-    /* border:1px solid black; */
-padding:1em 0;
-
+.info-form {
+  display: grid;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 1em;
 }
 
+.box {
+  /* border:1px solid black; */
+  padding: 1em 0;
+}
 
+.modal-container {
 
+  position: fixed;
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  display: grid;
+  pointer-events: none;
+opacity: 0;
+  place-items: center;
+  backdrop-filter: blur(5px);
+perspective: 40em;
+/* closing speed */
+transition: 1.5s cubic-bezier(.25, .74, .22, .99);
+ 
+}
+
+.modal-open {
+
+ opacity: 1;
+  pointer-events: all;
+  /* opening speed */
+  transition: 0.5s cubic-bezier(.25, .74, .22, .99);
+
+  /* display: block; */
+}
+
+.modal {
+  transform-style: preserve-3d;
+  padding: 1.5em 1em;
+  z-index: 2;
+
+  transform:rotateY(90deg) rotateX(60deg) translateY(30%);
+  transition: 1s cubic-bezier(.25, .74, .22, .99);
+  background: white;
+}
+
+.modal-content-open{
+
+  transform:initial;
+  transition: 1s cubic-bezier(.25, .74, .22, .99);
+  /* transform: scale(1); */
+}
+
+.modal p {
+  padding: 1em;
+  text-align: center;
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
+
+.button-container .button {
+  width: 5em;
+}
