--- a/src/app/components/toast/toast.component.css
+++ b/src/app/components/toast/toast.component.css
@@ -1,58 +1,50 @@
-.toast{
-    /* border:1px solid black; */
-    position: fixed;
-    border-radius: 0.3em;
-    right:1em;
-    top:30%;
-    z-index: 1;
-    padding:1em 2.5em;
+.toast {
+  /* border:1px solid black; */
+  position: fixed;
+  /* border-radius: 0.3em; */
+  right: 1em;
+  top: 30%;
+  z-index: 1;
+  padding: 1em 3.5em;
 
-    /* transition: 1s ease-in-out; */
-    display: none;
-    animation:active 1.5s ease-in-out forwards;
-  
-  
-  }
-  
-  .display{
+  /* transition: 1s ease-in-out; */
+  display: none;
+  animation: active 1.5s ease-in-out forwards;
+
+  text-transform: capitalize;
+}
+
+.display {
   display: block;
-  
-  }
-  
-  .success{
-    color: rgb(28, 131, 28);
-    border-left:1em solid rgb(89, 158, 89);
-    background: rgb(176, 245, 176);
-  }
+}
 
-  .warning{
-    color: rgb(28, 102, 131);
-    border-left:1em solid rgb(89, 130, 158);
-    background: rgb(176, 208, 245);
-  }
+.success {
+  color: rgb(28, 131, 28);
+  border-left: 1em solid rgb(89, 158, 89);
+  background: rgb(176, 245, 176);
+}
 
-  .danger
-  {
-    color: rgb(131, 28, 28);
-    border-left:1em solid rgb(158, 89, 89);
-    background: rgb(245, 176, 176);  
+.warning {
+  color: rgb(28, 102, 131);
+  border-left: 1em solid rgb(89, 130, 158);
+  background: rgb(176, 208, 245);
+}
+
+.danger {
+  color: rgb(131, 28, 28);
+  border-left: 1em solid rgb(158, 89, 89);
+  background: rgb(245, 176, 176);
+}
+@keyframes active {
+  0% {
+    opacity: 0;
   }
-  @keyframes active{
-    0%{
-      opacity: 0;
-    }
-    30%{
-      opacity: 1;
-      transform:translateY(-200%) ;
-    }
-    60%{
-      transform:translateY(-200%) ;
-    }
-    70%{
-      transform:translateY(-200%) ;
-    }
-    100%{
-      transform:translate(120%,-200%) ;
-    }
+  10%,
+  90% {
+    opacity: 1;
+    transform: translateY(-200%);
   }
-  
+  100% {
+    transform: translate(120%, -200%);
+  }
+}
