--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,6 @@
 <nav>
-    <p class="links">Stocks</p>
-    <p class="links">Expenses</p>
+    <p class="links" routerLink="/stocks" routerLinkActive="active">Stocks</p>
+    <p class="links" routerLink="/expenses" routerLinkActive="active">Expenses</p>
+
 
 </nav>
