--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -33,3 +33,19 @@ p:hover::before {
     width: 100%;
 
 }
+
+.active{
+    color: #62210d;
+    position: relative;
+ 
+}
+.active::after{
+    position: absolute;
+    content: "";
+    left:0;
+    bottom: 0;
+    width: 100%;
+    height:0.1em;
+    background: #62210d;
+}
+
