--- a/src/app/components/stocks/stocks.component.css
+++ b/src/app/components/stocks/stocks.component.css
@@ -1,6 +1,3 @@
-input {
-  text-transform: uppercase;
-}
 
 .grid-container {
   flex: 1;
@@ -21,6 +18,7 @@ input {
 .table-container {
   grid-area: table-container;
   align-self: flex-start;
+  max-height: 17em;
 }
 
 .stats-container {
