--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@ min-height: 100vh;
   display: grid;
   justify-items: start;
   align-items: flex-start;
+  align-content: flex-start;
   justify-content: start;
   gap: 1.5em;
 }
@@ -72,21 +73,24 @@ opacity: 0.6;
 
 input,
 label {
+
+
   display: block;
 }
 
 input {
-  text-transform: capitalize;
+  text-transform: uppercase;
   padding: 0.6em;
   border: none;
   border-bottom: 1px solid grey;
+
 }
 
 .table-container {
   /* border-radius: 1em; */
   display: inline-block;
   overflow: auto;
-  max-height: 17em;
+
 
 
   /* box-shadow: 1px 3px 4px 0px grey; */
@@ -116,7 +120,7 @@ th {
 td {
   padding: 0.5em 1em;
   cursor: pointer;
-  /* border-bottom: 1px solid grey; */
+  border-bottom: 1px solid grey;
   /* background-image: linear-gradient(to bottom, white, rgb(190, 190, 190)); */
 }
 
