--- a/src/app/components/expenses/expenses.component.css
+++ b/src/app/components/expenses/expenses.component.css
@@ -1,30 +1,26 @@
-.grid-container{
-
-
-    /* border:2px solid black; */
-    display: grid;
-    grid-template-columns: repeat(1, 0.4fr 1fr);
-    grid-template-areas: 
-    "form table-container";
-    padding: 0.5em;
-    gap: 0.5em;
-
+.grid-container {
+  /* border:2px solid black; */
+  display: grid;
+  grid-template-columns: repeat(1, 0.4fr 1fr);
+  grid-template-areas: "form table-container";
+  padding: 0.5em;
+  gap: 0.5em;
 }
 
-
-.table-container{
-    grid-area: table-container;
-    max-height: 17em;
+.table-container {
+  grid-area: table-container;
+  max-height: 17em;
 }
 
-.form{
-grid-area:form
+.form {
+  grid-area: form;
 }
 
-@media screen and (max-width:50em){
-    .grid-container{
-        grid-template-areas: 
-        "form form"
-        "table-container table-container";
-    }
+@media screen and (max-width: 50em) {
+  .grid-container {
+    grid-template-areas:
+      "form form"
+      "table-container table-container";
+  }
 }
+
