--- a/src/app/components/expenses/expenses.component.html
+++ b/src/app/components/expenses/expenses.component.html
@@ -1,24 +1,26 @@
-<div class="container">
+<div class="container" (click)="preventEventPropagation($event)">
     <app-nav></app-nav>
     <app-toast [toast]="toast" (test)="toast.active=$event"></app-toast>
 
     <app-modal [modal]="modal" (modalClick)=delete($event)></app-modal>
 
     <div class="grid-container">
- 
+
         <div class="form card" [formGroup]="form">
             <input type="text" formControlName="name" placeholder="name">
             <input type="number" formControlName="amount" placeholder="amount" step="0.1">
 
-            <button class="button submit" (click)="addExpense()" [class.disabled]="!form.valid"
-                [disabled]="!form.valid" *ngIf="!editFlag">add expense</button>
-            
+            <button class="button submit" (click)="addExpense()" [class.disabled]="!form.valid" [disabled]="!form.valid"
+                *ngIf="!editFlag">add expense</button>
 
-            <div *ngIf="editFlag" style="display: flex;gap:1em;"> 
+            <button class="button default" (click)="test()">test</button>
+
+            <app-dropdown [fruits]="fruits" [fruitsArray]="fruitsArray" [preventEventPropagation]="preventEventPropagation"></app-dropdown>
+
+            <div *ngIf="editFlag" style="display: flex;gap:1em;">
                 <button class="button submit" (click)="edit()" [class.disabled]="!form.valid" [disabled]="!form.valid">
                     update expense
                 </button>
-
                 <button class="button default" (click)="cancelEdit()">
                     cancel
                 </button>
@@ -29,7 +31,8 @@
 
         <div class="table-container card">
             <span *ngIf="data.length!=0">
-                <app-table [data]="data" [additionalFeatures]="additionalFeatures" (deleteData)="openModal($event)" (editData)="populateFields($event)">
+                <app-table [data]="data" [additionalFeatures]="additionalFeatures" (deleteData)="openModal($event)"
+                    (editData)="populateFields($event)">
                 </app-table>
             </span>
 
