pass values to dropdown component

--- a/src/app/components/dropdown/dropdown.component.css
+++ b/src/app/components/dropdown/dropdown.component.css
@@ -12,6 +12,7 @@
     overflow: hidden;
     position: absolute;
     background: white;
+    z-index: 1;
     left: 0;
     right: 0;
     bottom: 0;
