--- a/src/styles.css
+++ b/src/styles.css
@@ -26,10 +26,12 @@
   min-height: 100vh;
 
   display: flex;
+
   flex-direction: column;
 }
 
 .card {
+  background: white;
   box-shadow: 1px 3px 4px 0px grey;
 }
 .form {
@@ -123,6 +125,7 @@ input {
   /* box-shadow: 1px 3px 4px 0px grey; */
 }
 table {
+  background: white;
   width: 100%;
   min-height: 100%;
   border-collapse: collapse;
@@ -142,15 +145,19 @@ th {
   top: 0;
 }
 
+tr{
+  border-bottom: 1px solid grey;
+
+}
 td {
   padding: 0.5em 1em;
   cursor: pointer;
-  border-bottom: 1px solid grey;
+  
   /* background-image: linear-gradient(to bottom, white, rgb(190, 190, 190)); */
 }
 
 tr:focus{
-  box-shadow:inset 0 0 0 0.2rem #086918;
+  box-shadow:inset 0 0 0.4em 0.2rem #d1f3d6;
 }
 
 h1 {
