--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,51 +1,62 @@
+nav {
+  padding: 1em;
+  display: flex;
 
+justify-content: space-between;
+  background: var(--navbar-bg);
+  gap: 2em;
 
-nav{
+}
 
-    padding: 1em;
+.main-links{
+
     display: flex;
-    background: var(--navbar-bg);
-    gap:2em;
+    gap: 2em;
 }
 
-p{
-    /* border:1px solid black; */
-    padding:1em 0;
-    font-weight: bolder;
-    cursor: pointer;
-    position:relative;
-    transition:100ms ease-in-out;
-}
-p::before{
-    position: absolute;
-    content: "";
-    left:0;
-    bottom: 0;
-    width: 0%;
-    height:0.1em;
-    background: #62210d;
-    transition:300ms ease-in-out;
-}
-p:hover{
-    color: #62210d;
-}
-p:hover::before {
-    width: 100%;
+p {
 
+  padding: 1em 0;
+  font-weight: bolder;
+  cursor: pointer;
+  position: relative;
+  transition: 100ms ease-in-out;
 }
-
-.active{
-    color: #62210d;
-    position: relative;
- 
+.links::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 0.1em;
+  background: #62210d;
+  transition: 300ms ease-in-out;
 }
-.active::after{
-    position: absolute;
-    content: "";
-    left:0;
-    bottom: 0;
-    width: 100%;
-    height:0.1em;
-    background: #62210d;
+.links:hover {
+  color: #62210d;
+}
+.links:hover::before {
+  width: 100%;
 }
 
+.active {
+  color: #62210d;
+  position: relative;
+}
+.active::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0.1em;
+  background: #62210d;
+}
+
+.logout {
+color:white;
+}
+
+.logout:hover{
+color: #41555f;
+}
