--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,10 @@
 <nav>
+    <div class="main-links">
     <p class="links" routerLink="/stocks" routerLinkActive="active">Stocks</p>
     <p class="links" routerLink="/expenses" routerLinkActive="active">Expenses</p>
+</div>
+
+    <p class="logout" routerLink="/"  (click)="logout()" >Logout</p>
 
 
 </nav>
