--- a/src/app/components/toast/toast.component.css
+++ b/src/app/components/toast/toast.component.css
@@ -11,7 +11,7 @@
   display: none;
   animation: active 1.5s ease-in-out forwards;
 
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
 }
 
 .display {
