--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -29,18 +29,18 @@ p {
   bottom: 0;
   width: 0%;
   height: 0.1em;
-  background: #62210d;
+  background: var(--nav-link);
   transition: 300ms ease-in-out;
 }
 .links:hover {
-  color: #62210d;
+  color: var(--nav-link);
 }
 .links:hover::before {
   width: 100%;
 }
 
 .active {
-  color: #62210d;
+  color: var(--nav-link);
   position: relative;
 }
 .active::after {
@@ -50,7 +50,7 @@ p {
   bottom: 0;
   width: 100%;
   height: 0.1em;
-  background: #62210d;
+  background: var(--nav-link);
 }
 
 .logout {
